@@ -1,3 +1,10 @@
+2007-28-01  Richard Dale  <rdale@foton.es>
+
+	* Added reply values when emitting signals
+	* Some static methods were being dropped because they had the same
+	  name as property names. So make the static methods start with a
+	  lower case letter and keep them.
+
 2007-29-01  Arno Rehn  <arno@arnorehn.de>
 
 	* Fixed compiler options in examples to use -r instead of -addmodule
